syntax = "proto3";

package auth;

// Auth Service Definition
service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateUser(ValidateUserRequest) returns (ValidateUserResponse);
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
}

// Request Messages
message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string phone = 4;
  string address = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message ValidateUserRequest {
  string email = 1;
  string password = 2;
}

message GetProfileRequest {
  string userId = 1;
}

// Response Messages
message RegisterResponse {
  int32 statusCode = 1;
  string message = 2;
  UserData user = 3;
}

message LoginResponse {
  int32 statusCode = 1;
  string message = 2;
  string access_token = 3;
  UserData user = 4;
}

message ValidateUserResponse {
  bool valid = 1;
  UserData user = 2;
}

message GetProfileResponse {
  int32 statusCode = 1;
  UserData user = 2;
}

// Data Models
message UserData {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string address = 5;
  string role = 6;
  string createdAt = 7;
  string updatedAt = 8;
}
